# bad-words

./: .gitignore  README.md  compose.yml  flake.nix  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: qaa2w964mrr162r88aip6mbj2d74d7jv-source
backend/: Cargo.toml  backend-http.org
backend/handle-errors/: Cargo.toml
backend/handle-errors/src/: lib.rs
backend/questions/: Cargo.toml
backend/questions/migrations/: 20241020112828_questions-table.up.sql  20241020113718_answers_table.up.sql
backend/questions/src/: main.rs  store.rs
backend/questions/src/domains/: answers.rs  mod.rs  pagination.rs  questions.rs
backend/questions/src/routes/: health.rs
