[package]
name = "questions"
edition = "2021"
version = "0.1.0"
authors = ["<joeldsouzax@gmail.com>"]


[dependencies]
handle-errors = {path = "../handle-errors"}
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["migrate", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
warp = "0.3.7"
